QmakeProjectManager: Work around broken mkspecs

E.g. linux-oe-g++/qmake.conf has this craziness:
    QMAKE_CXX = arm-poky-linux-gnueabi-g++ -mthumb -mfpu=neon
                -mfloat-abi=hard -mcpu=cortex-a9
                -fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wformat
                -Wformat-security -Werror=format-security
Since there seems to be no hope for a fix, we work around it by looking
for compiler options in the alleged executable names and forwarding them
along with the flags from the actual *FLAGS variables.

Fixes: QTCREATORBUG-28201
Change-Id: Id0651677dd7b444a5f443e63d36e8dec52106af7
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>